// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apps Containers (connected components): Discover should be rendered correctly at initial store 1`] = `
<Context.Provider
  value={null}
>
  <withI18n(withBreakpoints(Discover))
    actionError={null}
    apps={Array []}
    dispatch={[Function]}
    fetchError={null}
    installedApps={Array []}
    isFetching={false}
    isInstalling={false}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />
</Context.Provider>
`;

exports[`Apps Containers (connected components): MyApplications should be rendered correctly at initial store 1`] = `
<Context.Provider
  value={null}
>
  <withI18n(withBreakpoints(MyApplications))
    actionError={null}
    apps={Array []}
    dispatch={[Function]}
    fetchError={null}
    installedApps={Array []}
    isFetching={false}
    isInstalling={false}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />
</Context.Provider>
`;
